--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     </div>
                     <div class="extra content">
                         <button id="buy-ticket" class="ui orange button">
-                            Buy MOVIE TICKETS
+                            BUY MOVIE TICKETS
                         </button>
                     </div>
                 </div>
